image pop up update

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<!-- <div class="alert alert-danger" *ngIf="timeOutSession">
+    <p>TIME OUT SESSION ENDED</p>
+</div> -->
 <app-header></app-header>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
