--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,8 +1,12 @@
+<!-- IMAGE POP UP -->
+<app-image-pop *ngIf="showImage" [imageUrl]="userInfo?.photoURL" (close)="closePop($event)"></app-image-pop>
+
+
 <div class="container-fluid" style="padding-left: 20px; padding-right: 20px; padding-top: 50px;">
     <!-- profile info which include "Name", "Profile Photo", "Joining date" -->
     <div class="d-flex flex-row" style="height: 20vh; margin-left: 10px;">
         <!-- image  -->
-        <img class="profile-image-style" [src]="userInfo?.photoURL">
+        <img class="profile-image-style" [src]="userInfo?.photoURL" (click)="showPop()" style="cursor: pointer;">
         <div class="d-flex flex-column" style="padding: 10px;">
             <h2>{{userInfo?.name}}</h2>
             <p>Joined In: {{joinedIn}}</p>
