small profile update

--- a/src/app/pages/profile/editprofile/editprofile.component.html
+++ b/src/app/pages/profile/editprofile/editprofile.component.html
@@ -46,7 +46,7 @@
                             <ul class="list-group" style="margin-top: 10px; margin-bottom: 10px;"
                                 *ngFor="let gender of genders">
                                 <button type="button" class="list-group-item list-group-item-action"
-                                    (click)="setQuizCategory(gender)">{{gender}}</button>
+                                    (click)="setgender(gender)">{{gender}}</button>
                             </ul>
                         </div>
                         <!-- <button type="button" class="btn btn-outline-secondary"
